samples/_failures_safe/1761307377_8c36b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3afc74ab.c: In function ‘main’:
./samples/SAFE/__tmp_3afc74ab.c:155:17: error: expected expression at end of input
  155 |                 } else
      |                 ^
./samples/SAFE/__tmp_3afc74ab.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3afc74ab.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3afc74ab.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3afc74ab.c:155:17: error: expected declaration or statement at end of input
